Cambios de encuesta y BD local

--- a/BlazorApp2/Components/Pages/Counter.razor
+++ b/BlazorApp2/Components/Pages/Counter.razor
@@ -5,16 +5,16 @@
 
 <style>
     body {
-        background-color: aliceblue; /* Fondo negro */
-        color: black; /* Color de texto blanco */
+        background-color: aliceblue; Fondo negro
+        color: black; Color de texto blanco
     }
 
     .btn-primary {
-        background-color: black; /* Color del botón */
+        background-color: black; Color del botón
     }
 
         .btn-primary:hover {
-            background-color: #6063; /* Azul más oscuro en hover */
+            background-color: #6063; Azul mas oscuro en hover
             border-color: #6063;
         }
 
@@ -51,7 +51,7 @@
         else
         {
             // Notificación de máximo
-            notificationMessage = "Que bien has llegado al maximo 100.";
+            notificationMessage = "Has llegado al maximo 100.";
         }
     }
 
