--- a/BlazorApp2/Components/Pages/Home.razor
+++ b/BlazorApp2/Components/Pages/Home.razor
@@ -29,7 +29,7 @@ body {
 }
 
 .hero {
-    background-image: url('/images/fondo.jpg'); /* imagen aqui */  
+    background-image: url('/images/fondo.jpg');https://upload.wikimedia.org/wikipedia/commons/9/99/Unofficial_JavaScript_logo_2.png
     background-size: cover;
     background-position: center;
     height: 100vh;
