Cambios de contribuyentes

--- a/BlazorApp2/Components/Pages/Counter.razor
+++ b/BlazorApp2/Components/Pages/Counter.razor
@@ -5,18 +5,20 @@
 
 <style>
     body {
-        background-color: aliceblue; Fondo negro
-        color: black; Color de texto blanco
+        background-color: aliceblue;
+        Fondo negro color: black;
+        Color de texto blanco
     }
 
     .btn-primary {
-        background-color: black; Color del botón
+        background-color: black;
+        Color del botón
     }
 
-        .btn-primary:hover {
-            background-color: #6063; Azul mas oscuro en hover
-            border-color: #6063;
-        }
+    .btn-primary:hover {
+        background-color: #6063;
+        Azul mas oscuro en hover border-color: #6063;
+    }
 
     .alert {
         color: red;
